--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
                 <p>&copy; 2025 MrSanti Streaming. Todos los derechos reservados.</p>
             </div>
             <div class="footer-social">
-                <a href="https://facebook.com/tu-usuario" target="_blank" aria-label="Facebook" class="social-link">
+                <a href="https://facebook.com/santiagoortiz" target="_blank" aria-label="Facebook" class="social-link">
                     <i class="fab fa-facebook-f"></i>
                 </a>
                 <a href="https://instagram.com/tu-usuario" target="_blank" aria-label="Instagram" class="social-link">
                     <i class="fab fa-instagram"></i>
                 </a>
-                <a href="https://tiktok.com/@tu-usuario" target="_blank" aria-label="TikTok" class="social-link">
+                <a href="https://www.tiktok.com/@santiago0024l" target="_blank" aria-label="TikTok" class="social-link">
                     <i class="fab fa-tiktok"></i>
                 </a>
                 <a href="https://wa.me/573023999133" target="_blank" aria-label="WhatsApp" class="social-link">
