--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <a href="https://instagram.com/tu-usuario" target="_blank" aria-label="Instagram" class="social-link">
                     <i class="fab fa-instagram"></i>
                 </a>
-                <a href="https://www.tiktok.com/@santiago0024l" target="_blank" aria-label="TikTok" class="social-link">
+                <a href="https://www.tiktok.com/santiago0024l" target="_blank" aria-label="TikTok" class="social-link">
                     <i class="fab fa-tiktok"></i>
                 </a>
                 <a href="https://wa.me/573023999133" target="_blank" aria-label="WhatsApp" class="social-link">
